[package]
name = "my-rgb-loop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
log-panics = "2.1.0"
palette = "0.7.3"
simplelog = "0.12.1"
orgb = { path = "../orgb" }
sleep-notifier = { path = "../sleep-notifier" }
