[package]
name = "sleep-notifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
windows = { version = "0.51.1", features = [
    "Win32_Foundation",
    "Win32_System_Power",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_SystemServices",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
] }
